--- a/Pages/css/stylecol6.css
+++ b/Pages/css/stylecol6.css
@@ -72,8 +72,8 @@ a:hover, a:focus, a:active {
 /* CONTAINER */
 
 .container {
-	padding-top: 100px;
-	width: 100%;
+    padding-top: 100px;
+    width: 100%;
 	margin: auto;
 	max-width: 1400px;
 	padding-bottom: 200px;
@@ -90,10 +90,11 @@ a:hover, a:focus, a:active {
 
 .content-grid {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(6, minmax(0, 1fr));
 	grid-auto-rows: auto;
 	grid-gap: 20px;
 	width: 100%;
+    
 }
 
 .cg_item-1 {
@@ -104,8 +105,8 @@ a:hover, a:focus, a:active {
 	max-height: 100%;
 }
 .cg_item-2 {
-	grid-row: 2;
-	grid-column: 1;
+	grid-row: 1;
+	grid-column: 4/span 6;
 }
 .cg_item-3 {
 	grid-row: 2;
@@ -157,6 +158,20 @@ a:hover, a:focus, a:active {
 	width: 100%;
 	max-height: 100%;
 }
+.cg_item-1a {
+	grid-row: 1;
+	grid-column: 1/span 3;
+	object-fit: fill;
+	width: 100%;
+	max-height: 100%;
+}
+.cg_item-1b {
+	grid-row: 2;
+	grid-column: 4/span 6;
+	object-fit: fill;
+	width: 100%;
+	max-height: 100%;
+}
 
 /* Mobile size control*/
 
@@ -179,7 +194,7 @@ a:hover, a:focus, a:active {
 	  }
 	  .cg_item-2{
 		grid-row: 2;
-		grid-column: 1/span 3;
+		grid-column: 1/span 6;
 	  }
 	  .cg_item-3{
 		grid-row: 3;
@@ -208,5 +223,13 @@ a:hover, a:focus, a:active {
 	  .cg_item-9{
 		grid-row: 9;
 		grid-column: 1/span 3;
+	  }
+	  .cg_item-1a{
+		grid-row: 1;
+		grid-column: 1/span 6;
+	  }
+	  .cg_item-1b{
+		grid-row: 3;
+		grid-column: 1/span 6;
 	  }
 	}
