--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -188,6 +188,11 @@ td,
 th {
   padding: 0;
 }
+
+.image-grid{
+  display: grid;
+}
+
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
   *,
