--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body, html {
-	font-family: monospace;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
 	color: #777;
@@ -8,6 +8,7 @@ body, html {
 }
 h1 {
 	text-align: justify;
+	line-height: 55px;
 }
 h2 {
 	margin: 0 0 20px 0;
@@ -32,10 +33,11 @@ h5 {
 h6 {
 	text-transform: uppercase;
 	font-weight: normal;
-	line-height: 20px;
-	text-align: left;
-	font-size: 22px;
+	line-height: 39px;
+	text-align: right;
+	font-size: 30px;
 	margin-left: 10px;
+	margin-top: 19px;
 	
 }
 p.intro {
