--- a/Pages/css/style.css
+++ b/Pages/css/style.css
@@ -15,11 +15,12 @@ h1 {
 	text-transform: uppercase;
 }
 p {
-	font-size: 20px;
+	font-size: 18px;
 	margin: 12px 0 0;
 	line-height: 24px;
 }
 a{
+	font-size: 20px;
 	color: #555;
 	border: 1px solid #555;
 	padding: 14px 20px;
@@ -163,11 +164,19 @@ a:hover, a:focus, a:active {
 @media screen and (max-width: 1024px) {
 
 	  .container {
+		padding-top: 140px;
 		width: 100%;
 		max-width: 97%;
 	  }
 	  .top{
 		width: 97%;
+	  }
+	  a{
+		font-size: 40px;
+	  }
+	  .logo{
+		max-height: 90px;
+		height: 90px;
 	  }
 	  .bottom-padding{
 		padding-bottom: 400px;
